...
        foregroundColor: Colors.white,
        title: FaIcon(FontAwesomeIcons.xTwitter, color: Colors.white, size: 30),
        centerTitle: true,
        leading: Builder(
          builder: (context) {
            return GestureDetector(
              key: const ValueKey("profilePic"),
              onTap: () => Scaffold.of(context).openDrawer(),
              child: Padding(
                padding: const EdgeInsets.all(8.0),
                child: CircleAvatar(
                  backgroundImage: NetworkImage(
                    ref.watch(userProvider).user.profilePic,
...
                    onTap: () {
                      // Sign-out
                      FirebaseAuth.instance.signOut();
                      ref.read(userProvider.notifier).logOut();
                    },
                    child: ListTile(
                      key: const ValueKey("signOut"),
                      title: Text(
                        "Sign out",
                        style: TextStyle(
                          fontSize: 18,
                          fontWeight: FontWeight.bold,
                          color: Colors.white,
...
